@@ -1,5 +1,6 @@
 2010-08-07  Christian Kuhn  <lolli@schwarzbu.ch>
 
+	* Fixed bug #15386: [Caching framework] Remove needless constant in cache manager
 	* Fixed bug #14971: Unit test for sanitizeLocalUrl fails on installations inside a subdirectory (thanks to Stefan Galinski & Pascal Jungblut)
 
 2010-08-06  Benjamin Mack  <benni@typo3.org>
